--- a/src/app/page-list/page-list.component.css
+++ b/src/app/page-list/page-list.component.css
@@ -1,9 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 
 
-h1 {
+thead, tbody {
     font-family: "Source Code Pro";
-    font-size: 4rem;
-    font-weight: bold;
 }
-
